fix hackathon card click feature on mobile
Former-commit-id: f5b5115da99b882ba976c07892711057b6869136
Former-commit-id: 7b49ecc0ea2829ab1bd1ed25588ac7e0d7d5324f

--- a/src/less/community/hackathon2018.less
+++ b/src/less/community/hackathon2018.less
@@ -430,11 +430,13 @@ section {
     }
 
     .project-desc {
-      font-size: 11px;
+      font-size: 12px;
+      line-height: 1.7;
       position: relative;
       top: auto;
       left: auto;
       transform: none;
+      padding: 0.8rem;
     }
 
     .awarded-github-btn {
@@ -461,6 +463,11 @@ section {
     .project-github-btn {
       padding: 6px 10px;
       font-size: 11px;
+    }
+
+    .project-thumbnail .project-desc {
+      line-height: 1.6;
+      padding: 0.8rem;
     }
   }
 
